[package]
name = "percolator"
version = "0.1.0"
edition = "2018"

[dependencies]
fail = "0.2"
futures = "0.1"
prost-derive = "0.4.0"
prost = "0.4"
bytes = "0.4.7"
labrpc = { git = "https://github.com/overvenus/labs6824.git" }
labcodec = { git = "https://github.com/overvenus/labs6824.git" }

[features]
default = []
no-fail = ["fail/no_fail"]
