[package]
name = "percolator"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[dependencies]
futures = "0.1"
futures-timer = "0.1"
prost-derive = "0.4.0"
prost = "0.4"
bytes = "0.4.7"
labrpc = { git = "https://github.com/overvenus/labs6824.git", branch = "rpc-hook" }
labcodec = { git = "https://github.com/overvenus/labs6824.git" }

[build-dependencies]
prost-build = "0.4.0"
